--- a/Client/index.html
+++ b/Client/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Nexus Bank" />
+    <meta
+      property="og:description"
+      content="We have revolutionized Banking Forever! Click to register a free account"
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:url" content="https://nexus-eam2.onrender.com" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Nexus</title>
   </head>
   <body>
     <div id="root"></div>
